--- a/ios/App/App/public/styles.css
+++ b/ios/App/App/public/styles.css
@@ -1306,6 +1306,16 @@ ion-toolbar {
   padding-left: 10px;
   margin: 0;
 }
+.warning-box {
+  font-size: 12px;
+  font-style: italic;
+  color: #b72121;
+  background: #b7212112;
+  padding-left: 10px;
+  margin: 0;
+  border: 1px solid #b72121;
+  border-radius: 5px;
+}
 .status-inactive {
   color: #858585;
   position: absolute;
