--- a/src/app/payments/payments.page.html
+++ b/src/app/payments/payments.page.html
@@ -101,7 +101,7 @@
       <span> No pending payment(s) found </span>
     </div>
 
-    <ion-item *ngFor="let pendingpayment of pendingpayments">
+    <ion-item lines="full" *ngFor="let pendingpayment of pendingpayments">
       <ion-grid class="ion-col-list">
         <ion-row>
           <ion-col size="6">
