--- a/src/app/settings/reviews/reviews.page.scss
+++ b/src/app/settings/reviews/reviews.page.scss
@@ -1,10 +1,11 @@
-h3 {
-    font-weight: bold;
+h6 {
+    text-transform: capitalize;
+    font-weight: 600;
     margin: auto;
 }
 
-h6 {
-    margin: auto;
+ion-icon {
+    color: #f7c704;
 }
 
 p {
