--- a/src/app/job-details/job-details.page.html
+++ b/src/app/job-details/job-details.page.html
@@ -108,9 +108,9 @@
         </div>
       </ion-col>
 
-      <ion-col *ngIf="JobDetails.status==2" size="12">
+      <ion-col *ngIf="JobDetails.status==2" size="6">
         <div>
-          <ion-button expand="block" color="themepurple">Please wait for quotation approval</ion-button>
+          <ion-button expand="block" color="themepurple">Wait for approval</ion-button>
         </div>
       </ion-col>
 
@@ -138,7 +138,8 @@
         </div>
       </ion-col>
 
-      <ion-col size="6" *ngIf="JobDetails.status==3 || JobDetails.status==5 || JobDetails.status==6 ">
+      <ion-col size="6"
+        *ngIf="JobDetails.status==3 || JobDetails.status==5 || JobDetails.status==6 || JobDetails.status==2">
         <div>
           <ion-button expand="block" color="themepurple" (click)="UpdateQuotation()">Update Quotation</ion-button>
         </div>
