--- a/src/app/payments/payments.page.html
+++ b/src/app/payments/payments.page.html
@@ -108,7 +108,8 @@
             <ion-label class="ion-text-wrap"><b>Order Id : </b>{{pendingpayment.orderId}}</ion-label>
           </ion-col>
           <ion-col size="6">
-            <ion-label class="ion-text-wrap date"><b>Date : </b>{{pendingpayment.date}}</ion-label>
+            <ion-label class="ion-text-wrap date"><b>Date : </b>{{apiService.formatDate(pendingpayment.date)}}
+            </ion-label>
           </ion-col>
         </ion-row>
         <ion-row>
