--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -51,7 +51,7 @@
 
       <ion-item (click)="ShowCategories()">
         <ion-label position="floating">Category</ion-label>
-        <p> <span *ngFor="let cats of SelectedCategories"> {{cats.name}}, </span> </p>
+        <p class="cat-selection-list"> <span *ngFor="let cats of SelectedCategories"> {{cats.name}}, </span> </p>
       </ion-item>
 
       <ion-item>
